
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.3.3    not yet released


== rufus-scheduler - 3.3.2    released 2017-01-05

- Fix ZoTime issue with Time.zone.now #=> 'CST', thanks zzjin
- Fix cron weekdays + monthdays, by Dominik Sander, https://github.com/dsander
- Speedup CronLine#brute_frequency, by Dominik Sander
- Use object_id instead of hash to make Job id


== rufus-scheduler - 3.3.1    released 2016-12-03

- gh-222 fall back on ENV['TZ'] when Time.now.zone is something
  like "中国标准时间" (ask for "Asia/Shanghai"), thanks to
  https://github.com/lovingyu


== rufus-scheduler - 3.3.0    released 2016-11-28

- Bring in Piavka's Job#trigger_off_schedule, gh-214
- Reject "day 0" in cronlines, thanks to Ramon Tayag, https://github.com/ramontayag
- Move away from ENV['TZ'], thanks to Akinori Musha, https://github.com/knu
- Fix .parse_to_time vs Date issue, as reported by @nsatragno


== rufus-scheduler - 3.2.2    released 2016-08-14

- job opt hash preservation, as suggested in gh-212, by https://github.com/d-m-u
- introduce Job#previous_time
- countered ActiveRecord 3.2.22 on gh-210, by https://github.com/paulodelgado


== rufus-scheduler - 3.2.1    released 2016-05-04

- accept '* * * * 5L' (last friday) (equivalent to '* * * * 5#-1')
- CronLine#to_a (#to_array aliasing to it)
- simplify .parse_duration (and trim input)
- raise on "*/0 * * * *", by https://github.com/simook
- introduce "days to end of month" in cron strings


== rufus-scheduler - 3.2.0    released 2015-12-28

- cache CronLine#brute_frequency results, gh-188 and gh-89
- "every" shift prevention by https://github.com/Korrigan
- Ruby warnings silenced by https://github.com/vivitar


== rufus-scheduler - 3.1.10    released 2015-11-18

- allow for :first_in => 0, gh-179 by https://github.com/JonMcPherson
  for https://github.com/Shopify/dashing/commit/ea3730fa4
- stop shipping specs in gem


== rufus-scheduler - 3.1.9    released 2015-11-12
